--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-vue": "^8.6.0",
     "eslint": "^9.0.0",
     "lucide-vue-next": "^0.541.0",
     "nuxt": "^4.0.3",
