fix: carousel navigation improvements
- Fix single image display (no carousel for single banner)
- Fix carousel bar indicator tracking with proper API connection
- Simplify dot navigation (active bar, inactive dots)
- Add proper TypeScript types for carousel API
- Ensure bar indicator moves correctly with slide changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["nuxt", "Nuxt", "shadcn", "turso", "TURSO", "vueuse"]
+  "cSpell.words": [
+    "nuxt",
+    "Nuxt",
+    "shadcn",
+    "turso",
+    "TURSO",
+    "umami",
+    "vueuse"
+  ]
 }
