--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-vue-next": "^0.541.0",
     "nuxt": "^4.0.3",
     "nuxt-og-image": "5.1.9",
+    "nuxt-umami": "3.2.0",
     "reka-ui": "^2.4.1",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.1",
